// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSSTransition should render correctly 1`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 2`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="some-transition--enter some-transition--enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 3`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 4`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="some-transition--exit some-transition--exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 5`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 6`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;

exports[`CSSTransition should render correctly 7`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="some-transition--enter some-transition--enter-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 8`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 9`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
  <div
    class="some-transition--exit some-transition--exit-active"
    data-testid="element"
  >
    This is some content.
  </div>
</div>
`;

exports[`CSSTransition should render correctly 10`] = `
<div>
  <button
    type="button"
  >
    Toggle
  </button>
</div>
`;
